FreeST/test/Programs/InvalidTests/SessionTypes/sendOnInChannel/sendOnInChannel.fst
f : ?Int -> Skip
f c = send 5 c

main : Int
main = 5
